# domain-context-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.agent-substrate/: profile.json
.repo-context/: profile.json
docs/: architecture.md  claude-code.md  client-integration.md  installation.md  roadmap.md
examples/: client-config.json
scripts/: dogfood_mcp.py
src/agent_substrate_mcp/: auth.py  domains.py  knowledge.py  llm.py  server.py  store.py  workflows.py  workspace.py
src/domain_context_mcp/: __init__.py  auth.py  domains.py  execution.py  llm.py  server.py  store.py  workspace.py
src/repo_context_mcp/: __init__.py  auth.py  domains.py  llm.py  server.py  store.py  tasks.py  workspace.py
tests/: conftest.py  test_auth.py  test_domains.py  test_execution.py  test_knowledge.py  test_knowledge_updates.py  test_tasks.py  test_workflows.py  test_workspace.py
