[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-substrate-mcp"
version = "0.1.0"
description = "A local MCP substrate for repo context, execution ledgers, and reviewed knowledge updates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.8.0",
  "openai>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
agent-substrate-mcp = "agent_substrate_mcp.server:main"
agent-substrate-auth = "agent_substrate_mcp.auth:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
