[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-context-mcp"
version = "0.1.0"
description = "A local MCP substrate for repo context, execution ledgers, and reviewed knowledge updates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.8.0",
  "openai>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
repo-context-mcp = "repo_context_mcp.server:main"
repo-context-auth = "repo_context_mcp.auth:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
