[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domain-context-mcp"
version = "0.1.0"
description = "A local MCP substrate for domain context, execution ledgers, and reviewed knowledge updates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.8.0",
  "openai>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
domain-context-mcp = "domain_context_mcp.server:main"
domain-context-auth = "domain_context_mcp.auth:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
